tests/baselines/reference/parserLabeledStatement1.d.errors.txt
parserLabeledStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.
parserLabeledStatement1.d.ts(2,3): error TS2304: Cannot find name 'bar'.


==== parserLabeledStatement1.d.ts (2 errors) ====
    foo:
    ~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
      bar();
      ~~~
!!! error TS2304: Cannot find name 'bar'.